fixed links not showing up

--- a/src/Testform.css
+++ b/src/Testform.css
@@ -5,6 +5,10 @@
   align-items: center;
 }
 
+.searchform {
+  margin: 10px;
+}
+
 .text {
   width: 50%;
   text-align: center;
