--- a/src/Titlebar.css
+++ b/src/Titlebar.css
@@ -10,7 +10,7 @@
   margin: 0px 0px 10px 0px;
 }
 
-a {
+a.title {
   color: white;
   text-decoration: none;
 }
